--- a/index.html
+++ b/index.html
@@ -7,21 +7,24 @@
     <title>Ritwik's Portfolio Website</title>
 
     <style>
-        .Timer{
+        
+        body{
+            width: 50px;
+        }.Timer{
             position: absolute;
-            top: 12px;
-            left: 450px;
+            top: 700px;
+            left: 12px;
         }
         h4{
             position: absolute;
-            left: 140px;
+            left: 12px;
 
         }
 
         .airhockey{
             position: absolute;
-            left: 900px;
-            top: 12px;
+            left: 12;
+            top: 1400px;
         }
     </style>
 </head>
